tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_active_agent_label.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Robie [explorer]                                           100% context left  "
"                                                                   context: --  "
