tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_context_tokens_used.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? for shortcuts                                                    123K used  "
"                                                                   context: --  "
