tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_mode_indicator_narrow_overlap_hides.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1555
expression: terminal.backend()
---
"  【 📝 Plan  (shift+tab to cycle)】              " Hidden by multi-width symbols: [(3, " "), (6, " "), (35, " ")]
