tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_mode_indicator_running_hides_hint.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1555
expression: terminal.backend()
---
"  ? for shortcuts · 【 📝 Plan 】                                                                    100% context left  " Hidden by multi-width symbols: [(21, " "), (24, " "), (32, " ")]
