tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_plan_mode_rejection_hint_with_status_line.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1555
expression: terminal.backend()
---
"  Status line content                                                           "
"  【 📝 Plan  (shift+tab to cycle)】 · Action blocked while planning — switch to" Hidden by multi-width symbols: [(3, " "), (6, " "), (35, " ")]
