tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_shortcuts_context_running.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? for shortcuts                                             72% context left  "
"                                                                   context: --  "
