tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_status_line_disabled_context_right.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1555
expression: terminal.backend()
---
"  ? for shortcuts · 【 📝 Plan  (shift+tab to cycle)】                                                50% context left  " Hidden by multi-width symbols: [(21, " "), (24, " "), (53, " ")]
